@@ -10,7 +10,8 @@ sub get_column {
 
    my $value = $self->next::method($col);
 
-   $value += 0 if $self->result_source->column_info($col)->{is_numeric};
+   $value += 0 if $self->result_source->column_info($col)->{is_numeric}
+                  and defined($value); # for nullable and autoinc fields
 
    return $value;
 }
@@ -22,7 +23,8 @@ sub get_columns {
 
    for (keys %columns) {
       $columns{$_} += 0
-         if $self->result_source->column_info($_)->{is_numeric};
+         if $self->result_source->column_info($_)->{is_numeric}
+            and defined($columns{$_}); # for nullable and autoinc fields
    }
 
    return %columns;
